--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,12 @@
 Menu:
 
 <ul>
-  <li><a href="/git-wiki/">Home</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">Inicio</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">TP1</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">TP2</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">TP3</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">TP4</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">TP5</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">TP6</a></li>
+  <li><a href="https://zimmcl.github.io/Comunicaciones_de_datos/">TP7</a></li>
 </ul>
